# greenlight-rs

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-1f2f8d17f5e9349d02e8c9bc225706771d9b297379a5a501dfaf3f8f112ebda3.json  query-2767b93bcf44d29076b936c7a4bdb21ca5aa98d6ceb8044e13322062389e889c.json  query-5be841d7e6f9af6d3f3b687f043c61b2c5406b220dcdac625592fa6fc1d60a3d.json  query-60877f1a63ca0a2b88d4915c417e82d0c1a844293559fdd7aa390cd077ad62af.json  query-9c26eddc54831f0b5844b23a07a031373b94ef595c0ceb761bb0621de9183667.json  query-9e16580c5182dcdf66c4e988ffad690d2ad55f05a1d38d0994af39de3d5ddae5.json  query-dcf0b828e942c652795d2002aefb7bda92a17a58d7fa2b0d45f5f4a96ce5ebef.json  query-dfbf14bdc44e34805c321fb1a8c35d3d64da83481d722d934811b10e7822e216.json  query-fd6bb0019fa065d667766bbb23ba9b2c3a70aa43c25e3ef83ebf1ab8fe79deed.json
migrations/: 20230805003506_add_citext_extension.down.sql  20230805003506_add_citext_extension.up.sql  20230806104215_create_movies_table.down.sql  20230806104215_create_movies_table.up.sql  20230806104552_add_movies_check_constraints.down.sql  20230806104552_add_movies_check_constraints.up.sql  20230806105104_add_movies_indexes.down.sql  20230806105104_add_movies_indexes.up.sql  20230806105535_create_users_table.up.sql  20230806105928_create_tokens_table.down.sql  20230806105928_create_tokens_table.up.sql  20230806110255_add_permissions.down.sql  20230806110255_add_permissions.up.sql  20230819082835_modify_password_hash_type.down.sql  20230819082835_modify_password_hash_type.up.sql
scripts/: init-tables.sql  (+2 more)
(+30 files in other folders)
