[package]
name = "greenlight"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "greenlight"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
claims = "0.7.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres",  "chrono"] }
thiserror = "1.0.24"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17",   features = ["registry", "env-filter"] }
serde = "1.0.115"
serde_json = "1.0.104"
clap = { version = "4.3.19", features = ["derive"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
validator = "0.16.1"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.7.1"
zxcvbn = "2.2.2"
argon2 = { version = "0.5.1",  features = ["std"] }
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1.0.75"
data-encoding = "2.4.0"
sha2  = "0.10.7"
redis = { version = "0.23.2", features = ["tokio-comp"] }
askama = "0.12.0"
bincode = "1.3.3"
mail-send = "0.4.0"
futures-util = "0.3.28"
